assets/css/_doc_guide.scss
$doc_transition_time : 0.25s;
.doc-container {
  top: 60px;
  max-width: calc(100% - 30px);
  margin-left: 15px;
  @media (min-width: $window-medium-px) {
    max-width: calc(100% - 45px);
  }
  @media (min-width: $window-xxlarge-px) {
    max-width: 100%;
  }
  margin-top: 20px;
  z-index: 10;
  .doc-row {
    display: flex;
    justify-content: center !important;
  }
  .doc_info {
    width: 100%;
    display: block;
    padding: 20px 10px;
    color: $text-color;
    .doc_name {
      font-family: $braze-medium;
      color: $black-shark;
      font-size: 20px;
      line-height: 1.8;
      margin-bottom: 10px;
      span {
        border-bottom: 1px solid #73D4E5!important;
      }
    }
    .doc_description {
      margin-top: auto;
      margin-bottom: auto;
      font-family: $braze-regular;
      font-size: 16px;
      line-height: 1.8;
      display: inline-block;
    }
    .doc_description a {
      color: $text-color;
    }
    .doc_description a:hover {
        text-decoration: none;
        color: $black-shark;
      }
  }
}
#doc-main {
  @media (min-width: $window-xlarge-px) {
    max-width: $main_max_width;
  }


  h2 {
    color: $black-shark;
    font-family: $braze-medium;
  }
  .doc_menu_title {
    margin-top: 30px;
  }

  #doc_list {
    width: 100%;
    display: flex;
    display: -webkit-flex; /* Safari */
    flex-direction: column;
    @media (min-width:  $window-medium-px) {
      flex-direction: row;
      flex-wrap: wrap;
    }
    a {
      color: $text-color;
      text-decoration: none;
      border-bottom-width: 0;
      border-color: inherit;
      background-color: inherit;
      display: flex;
      display: -webkit-flex; /* Safari */
      margin-bottom: 30px;
      //width: 100%;
      flex: 0 0 45%;
      @media (min-width:  $window-medium-px) {
//        width: 30.3%;
        margin-right: 3%;
        //margin-left: 1.5%;
      }
      &:hover {
        .doc_item {
          box-shadow: 0px 3px 36px #00000029;
          border-radius: 10px;
        }
        .arrow {
          visibility: visible;
        }
      }
    }


    .doc_item {
      width: 100%;
      display: flex;
      flex-direction: row;
      color: $black-shark;
      @media (min-width:  $window-medium-px) {
      }
      vertical-align: top;
      text-align: left;
      font-size: 15px;
      font-family: $braze-regular;
      overflow: hidden;
      border-radius: 2px;

      .doc_img {
        height: 145px;
        width: 90px;
        display: block;
        margin: auto;
        img {
          display: block;
          margin: auto;
          width: 30px;
          height: 30px;
          position: relative;
          top: 50%;
          transform: translateY(-50%);
        }
      }
      .arrow {
        margin-right: -15px;
        visibility: hidden;
      }
    }


  }
  #doc_bottom {
    width: 100%;
    display: flex;
    display: -webkit-flex; /* Safari */
    border-top: 1px solid #d3d3d3;
    flex-direction: row;
    @media (min-width:  $window-medium-px) {
      flex-direction: row;
    }
    .doc_bottom_full {
      flex: 1 !important;
    }
    #doc_bottom_left {
      display: inline-block;
      //width: 100%;

      margin-bottom: 2%;
      margin-top: 15px;
      flex-direction: column;
      flex: 0 0 63.6%;
      @media (min-width:  $window-medium-px) {
        //width: 63.6%;
        margin-right: 1.5%;
        //margin-left: 1.5%;
        margin-bottom: 2%;
      }

      a {
        display: inline-block;
        border-bottom-color: transparent;
      }
      #doc_lab {
        color: $black-shark;
        // border: 1px solid $grey-ghost;
        margin-bottom: 30px;
        padding: 15px;
        //height: 240px;
        display: flex;
        @media (min-width:  $window-medium-px) {
          //height: 150px;
        }

        #doc_lab_img {
          //width: 30%;
          flex: 0 0 20%;
          margin-right: 15px;
          margin-left: 25px;
          margin-top: auto;
          margin-bottom: auto;
          //display: inline-block;
          height: 100%;
          img {
            width: 75%;
            position: relative;
            top: 25%;
            // top: 50%;
            // transform: translateY(-50%);
          }
        }
        #doc_lab_info {
          padding: 0 0 0 25px;
        }
      }

      #doc_help {
        border: 1px solid $grey-ghost;
        box-shadow: 0 0 6px 0 rgba(32,32,36,0.12);
        border-radius: 2px;
        padding: 17px 25px 30px 25px;
        a {
          display: inline-block;
          border-bottom-color: $braze-link-color;
          &:hover {
            background-color: $braze-link-color;

          }
        }
        #help-search-form {
          width: 100%;
          border: 1px solid $grey-ghost;
          border-radius: 4px;
          margin-top: 15px;

          .input-group{
            width: 100%;

            input {
              width: 100%;
              height: 40px;
              flex: none;

              // background-position: right 12px top 11px;
              // background-size: 18px 18px;
              // background-repeat: no-repeat;
              // background-color: transparent;
              // background-image:url(#{$base_url}/assets/img/search_black_shark.svg);
              opacity: 0.7;
              &:hover {
                opacity: 1;
                .btn {
                  opacity: 1;
                }
              }
            }


          }
          .btn {
            margin: 0 0 0 -40px;
            color: $black-shark;
            z-index: 100;
            padding: 4px 12px;
            background-color: transparent;
            opacity: 0.7;
          }


        }
      }
    }
  }
  *,
  *::before,
  *::after {
    border-width: 0;
    border-style: solid;
  }
  a {
    display: inline;
    color: $black-shark;

    border-bottom-width: 2px;
    border-color: $braze-link-color;
    text-decoration: none;
    transition: all ease $doc_transition_time;
    -webkit-transition:  all ease $doc_transition_time;
    -moz-transition:  all ease $doc_transition_time;
    &:hover {
      background-color: none;
    }
  }
}

#doc_right {
  margin-top: 10px;
  display: flex;
  display: -webkit-flex; /* Safari */
  flex-direction: column;

  @media (min-width:  $window-xlarge-px) {
    max-width: 280px;
  }

  @media (min-width:  $window-medium-px) {
    margin-right: 1.5%;
    margin-left: 1.5%;
    margin-bottom: 2%;
  }
  #doc_popular, #doc_helpful {
    margin-bottom: 0px;
    margin-top: 0px;
    a {
      display: inline-block;
      border-bottom-color: transparent;
      line-height: 1.5;
      font-size: 14px;
      // margin-bottom: 10px;
      &:hover {
        background-color: transparent;
        border-bottom-color: $braze-link-color;
      }
    }
  }

  #doc_status {
    // border: 1px solid $grey-ghost;
    // box-shadow: 0 0 6px 0 rgba(32,32,36,0.12);
    border-radius: 2px;
  }

  #gradient {
    margin: 30px 0px 30px 10px;
    width: 70px;
    height: 3px;
    transform: matrix(-1, 0, 0, -1, 0, 0);
    background: transparent linear-gradient(270deg, #69C8D9 0%, #A0AEB5 29%, #DD928E 53%, #F1A46F 100%) 0% 0% no-repeat padding-box;
    border-radius: 4px;
    opacity: 1;
  }

  a {
    display: inline-block;
    border-bottom-color: transparent;
  }

  #doc_status {
    padding: 15px 15px 15px 17px;
    &:hover {
      border-color: $braze-link-color;
    }
    .color-dot {
        -webkit-border-radius: 99px;
        -moz-border-radius: 99px;
        border-radius: 99px;
        display: inline-block;
        width: 8px;
        height: 8px;
        margin-right: 8px;
        opacity: 1;
    }

    .color-dot.critical {
        background-color: #ff5b68;
    }

    .color-dot.major {
        background-color: #ff5b68;
    }

    .color-dot.minor {
        background-color: #ff9349;
    }

    .color-dot.none {
        background-color: #66d4b3;
    }
    .status-title{
      display: block;
      font-family: $braze-medium;
      opacity: 0.7;
      letter-spacing: 0.46px;
      color: $black-shark;
      font-size: 11px;
    }
    .color-description {
      font-family: $braze-black;
      color: $black-shark;
      opacity: 0.7;
      display: inline-block;
      font-size: 11px;
    }
  }
}
#doc-main-search {
  margin-top: 20px;
  @media (min-width:  $window-xxlarge-px) {
    max-width: 1500px;
    margin: auto;
  }
}
#footer_div {
  margin: auto;
  border-top: none !important;
}

.main_content {
  position: relative;
}

